--- a/config/config.json
+++ b/config/config.json
@@ -14,9 +14,9 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
+    "username": "e1g7xktljzb2ss7w",
+    "password": "mqq34hadqi28ukrl",
+    "database": "dwi3hr1nspq19njo",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
